syntax = "proto3";

option java_package = "com.eva.pexelsapp";
option java_multiple_files = true;

message SearchFilterProtoMessage {
  optional SearchFilterOrientationOptions orientation = 1;
  optional SearchFilterSizeOptions size = 2;
}

enum SearchFilterOrientationOptions {
  ALL = 0;
  LANDSCAPE = 1;
  PORTRAIT = 2;
  SQUARE = 3;
}

enum SearchFilterSizeOptions {
  All = 0;
  LARGE = 1;
  MEDIUM = 2;
  SMALL = 3;
}
